<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.mynotes.VehicleNote.MainActivity">
<item
    android:id="@+id/action_save"
    android:icon="@android:drawable/ic_menu_save"
    android:orderInCategory="100"
    android:title="@string/save"
    app:showAsAction="ifRoom" />
<item
    android:id="@+id/action_cancel"
    android:icon="@android:drawable/ic_menu_close_clear_cancel"
    android:orderInCategory="101"
    android:title="@string/cancel"
    app:showAsAction="never|ifRoom" />
<item
    android:id="@+id/action_delete"
    android:icon="@android:drawable/ic_menu_delete"
    android:orderInCategory="102"
    android:title="@string/delete"
    app:showAsAction="ifRoom" />
<item
    android:id="@+id/action_send_mail"
    android:orderInCategory="103"
    android:title="@string/send_as_email"
    app:showAsAction="never"/>
</menu>
